<resources>
    <string name="app_name">argueWithAi</string>
    <string name="accessibility_service_description">accessibilityService</string>
    <string name="service_label">argueWithAi</string>
    <string name="service_desc">YouTube Shorts 화면을 감지하는 접근성 서비스</string>
    <string name="service_summary">YouTube Shorts 화면을 감지하는 접근성 서비스</string>

    <string name="overlay_guide">화면 띄우기 설정을 켜주세요</string>
    <string name="accessibility_guide">접근성에서 ‘ArgueWithAi’ 서비스를 켜주세요</string>
    <string name="accessibility_error">"설정을 열 수 없습니다. 수동으로 접근성 메뉴를 열어주세요."</string>
    <string name="send">"챗봇과 대화해주세요"</string>

    <string name="hidden_message">메시지를 입력하세요</string>
    <string name="button_description">보내기</string>

    <string name="back">뒤로가기</string>
    <string name="title">Argue With AI</string>

    <string name="time_format">오후 3:21</string>


    <string name="pip_permission_message">Youtube와 Instagram의 PIP 권한을 해제해주세요.</string>
    <string name="youtube_pip_permission_message">Youtube PIP 권한 해제</string>
    <string name="instagram_pip_permission_message">Instagram PIP 권한 해제</string>

    <string name="example_message">Example message</string>
    <string name="example_time">10s</string>
    <string name="page">1/3</string>
</resources>